--- a/index.html
+++ b/index.html
@@ -10,28 +10,28 @@
 </head>
 <body>
     <div class="calculatrice">
-        <div class="ecran">
+        <div id="ecran">
             </div>
             <div class="touches">
-                <buton id="" class="btnClear">c</buton>
-                <buton id="" class="boutton">(</buton>
-                <buton id="" class="boutton">)</buton>
-                <buton id="" class="boutton">/</buton>
-                <buton id="" class="boutton">7</buton>
-                <buton id="" class="boutton">8</buton>
-                <buton id="" class="boutton">9</buton>
-                <buton id="" class="boutton">*</buton>
-                <buton id="" class="boutton">4</buton>
-                <buton id="" class="boutton">5</buton>
-                <buton id="" class="boutton">6</buton>
-                <buton id="" class="boutton">-</buton>
-                <buton id="" class="boutton">1</buton>
-                <buton id="" class="boutton">2</buton>
-                <buton id="" class="boutton">3</buton>
-                <buton id="" class="boutton">+</buton>
-                <buton id="" class="boutton">0</buton>
-                <buton id="" class="boutton">.</buton>
-                <buton id="" class="btnEgal">=</buton>
+                <button id="btnClear" class="boutton">c</buton>
+                <button id="" class="boutton">(</button>
+                <button id="" class="boutton">)</button>
+                <button id="" class="boutton">/</button>
+                <button id="" class="boutton">7</button>
+                <button id="" class="boutton">8</button>
+                <button id="" class="boutton">9</button>
+                <button id="" class="boutton">*</button>
+                <button id="" class="boutton">4</button>
+                <button id="" class="boutton">5</button>
+                <button id="" class="boutton">6</button>
+                <button id="" class="boutton">-</button>
+                <button id="" class="boutton">1</button>
+                <button id="" class="boutton">2</button>
+                <button id="" class="boutton">3</button>
+                <button id="" class="boutton">+</button>
+                <button id="" class="boutton">0</button>
+                <button id="" class="boutton">.</button>
+                <button id="btnEgal" class="boutton">=</button>
 
             </div>
 
